[build-system]
requires = ["setuptools>=64", "wheel", "fmodpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pylabdd"
version = "1.2.2"
description = "Python Laboratory for Dislocation Dynamics"
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }

authors = [
  { name = "Alexander Hartmaier", email = "alexander.hartmaier@rub.de" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
  "numpy",
  "matplotlib",
  "pytest",
  "fmodpy"
]

[project.optional-dependencies]
dev = ["pytest-runner", "black", "build", "twine"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
packages = ["pylabdd"]

[tool.setuptools.package-data]
pylabdd = ["PK_force/*", "*.f90", "*.so", "*.pyd"]

# Dummy extension to force call of build_ext
[[tool.setuptools.ext-modules]]
name = "pylabdd.PK_force"
sources = []  # no sources build is done in setup_fortran.py

[tool.setuptools.cmdclass]
build_ext = "setup_fortran.BuildFortran"
