[build-system]
requires = ["setuptools>=77", "wheel", "fmodpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pylabdd"
version = "1.2.2"
description = "Python Laboratory for Dislocation Dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"

authors = [
  { name = "Alexander Hartmaier", email = "alexander.hartmaier@rub.de" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
  "numpy",
  "matplotlib",
  "pytest",
  "fmodpy"
]

[project.optional-dependencies]
dev = ["pytest-runner", "black", "build", "twine"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
packages = ["pylabdd"]

[tool.setuptools.cmdclass]
build_py = "pylabdd.buildtools.setup_fortran.BuildFortran"

[tool.setuptools.package-data]
pylabdd = ["PK_force/*", "PK_force_py/*", "buildtools/*", "*.f90"]
